전체 분갈이 기록 보기 메소드 및 관련 QueryDsl 리파지토리 생성, Repot 엔티티 컬럼 추가